Lazy loading of portfolio, transaction and logs In community, removed portfolio, transaction and log tabs from detail-item

--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -80,7 +80,8 @@
                     <aq-backtest-detail-item 
                         heading="Attached Backtest Details"     
                         backtest-id="[[getBacktestId(postContent)]]"
-                        can-clone=[[!preview]]>
+                        can-clone=[[!preview]]
+                        community>
                     </aq-backtest-detail-item>
                 </div>
             </template>
